Large refactor
- Apply extensions dynamically only when needed
- Add support for neogradle
- Refactor a ton of shit

Signed-off-by: solonovamax <solonovamax@12oclockpoint.com>